[package]
name = "datasec_evoting"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["rand_core", "alloc"] }    # U128 and beyond. Modular operations, Montgomery form.
crypto-primes = "0.6.2"                                                     # Prime generation & primality
num-traits = "0.2.19"                                                       #
rand = "0.9.2"                                                              # Provide rng for crypto-bigint types
